DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Additional_Fees__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fees__c</fullName>
    <label>Additional Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>