DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <formula>text( Product2.Category_Type__c )</formula>
    <label>Category/Type</label>
    <type>Text</type>
</CustomField>