DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Rental or Lease</fullName>
            </value>
            <value>
                <fullName>GSM Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>