DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/CREATEDBY_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>CREATEDBY_MIGRATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CREATEDBY_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quote Line Items (CREATEDBY_MIGRATION)</relationshipLabel>
    <relationshipName>Quote_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>