DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Discount_Applied__c</fullName>
    <formula>IF( UnitPrice &lt;  PricebookEntry.UnitPrice , 1-((UnitPrice* Quantity)/(PricebookEntry.UnitPrice* Quantity)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Applied</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>