DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/DiscountedSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountedSalesPrice__c</fullName>
    <formula>UnitPrice * (1-Discount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>