DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/DiscountedTotalSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountedTotalSalesPrice__c</fullName>
    <formula>Quantity *  DiscountedSalesPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>