DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Existing_MRC_Value__c.field-meta.xml
<CustomField>
    <fullName>Existing_MRC_Value__c</fullName>
    <label>Existing MRC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>