DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/FORMULA_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Charge_Type__c</fullName>
    <formula>Text(Product2.Charge_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Type</label>
    <type>Text</type>
</CustomField>