DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/FORMULA_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Monthly_Fee__c</fullName>
    <formula>if ( OpportunityLineItem.FORMULA_Monthly_Fee__c&gt;0 , OpportunityLineItem.FORMULA_Monthly_Fee__c , PricebookEntry.Product2.Monthly_Fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>