DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/FORMULA_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Product_Type__c</fullName>
    <formula>Text( PricebookEntry.Product2.Product_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>