DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Hardware_Fee__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Fee__c</fullName>
    <formula>IF( AND(ISPICKVAL(Charge_Type__c , &quot;OTC&quot;), Category_Type__c=&quot;Hardware&quot;) ,

IF( Discount &gt; 0 ,(UnitPrice * Quantity)*Discount ,UnitPrice * Quantity),0)</formula>
    <label>Hardware Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>