DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/LASTMODIFIEDBY_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDBY_MIGRATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LASTMODIFIEDBY_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>