DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/LineItem_Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>LineItem_Actual_Amount__c</fullName>
    <formula>If (

AND(Product2.Not_Allowed_to_Change_Standard_Price__c=TRUE, UnitPrice &gt; PricebookEntry.UnitPrice)||
AND(Product2.Not_Allowed_to_Change_Standard_Price__c=FALSE,PricebookEntry.UnitPrice = 0), 

UnitPrice * Quantity,

PricebookEntry.UnitPrice  * Quantity

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LineItem Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>