DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Map_Link__c</fullName>
    <formula>IF( OR( PNG_Latitude__c  = 0 , PNG_Longitude__c = 0  ) , &quot;Missing Coordinates&quot;, HYPERLINK(&quot;https://www.google.com/maps/place/&quot;&amp; TEXT(PNG_Latitude__c  )&amp;&quot;+&quot;&amp; TEXT(PNG_Longitude__c)&amp;&quot;/@&quot;&amp; TEXT(PNG_Latitude__c)&amp;&quot;,&quot;&amp; TEXT(PNG_Longitude__c)&amp;&quot;,350m/data=!3m1!1e3!&quot;, &quot;View Coordinates in Google Map&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Link</label>
    <type>Text</type>
</CustomField>