DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <formula>IF( ISPICKVAL(Charge_Type__c , &quot;MRC&quot;), 

IF( Discount &gt; 0 ,(UnitPrice *  Quantity)-(UnitPrice *  Quantity)*Discount ,UnitPrice *  Quantity),0)</formula>
    <label>MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>