DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/OpportunityLineItem_FORMULA_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem_FORMULA_Monthly_Fee__c</fullName>
    <formula>OpportunityLineItem.FORMULA_Monthly_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityLineItem.FORMULA_Monthly_Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>