DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/OTC__c.field-meta.xml
<CustomField>
    <fullName>OTC__c</fullName>
    <formula>IF( ISPICKVAL(Charge_Type__c , &quot;OTC&quot;),

IF( Discount &gt; 0 ,(UnitPrice * Quantity)-(UnitPrice * Quantity)*Discount ,UnitPrice * Quantity),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>