DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/PNG_ConnectivitySolution__c.field-meta.xml
<CustomField>
    <fullName>PNG_ConnectivitySolution__c</fullName>
    <label>Connectivity Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>