DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/PNG_FixedVoiceService__c.field-meta.xml
<CustomField>
    <fullName>PNG_FixedVoiceService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed Voice Service?</label>
    <type>Checkbox</type>
</CustomField>