DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/PNG_GPSCoordinates__c.field-meta.xml
<CustomField>
    <fullName>PNG_GPSCoordinates__c</fullName>
    <label>GPS Co-ordinates</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>