DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/PNG_ISPCost__c.field-meta.xml
<CustomField>
    <fullName>PNG_ISPCost__c</fullName>
    <label>ISP Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>