DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/PNG_ROIMonths__c.field-meta.xml
<CustomField>
    <fullName>PNG_ROIMonths__c</fullName>
    <label>ROI (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>