DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/PNG_Speed__c.field-meta.xml
<CustomField>
    <fullName>PNG_Speed__c</fullName>
    <formula>TEXT(Product2.PNG_ProductLevel2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speed</label>
    <type>Text</type>
</CustomField>