DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Quote_Line_Item_Key__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line Item Key</label>
    <type>Text</type>
</CustomField>