DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Stock_Status__c</fullName>
    <label>Stock Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ex-Stock</fullName>
            </value>
            <value>
                <fullName>Not In Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>