DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Tech_Discount__c.field-meta.xml
<CustomField>
    <fullName>Tech_Discount__c</fullName>
    <formula>Discount /100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>