DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Total_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit__c</fullName>
    <formula>if( FORMULA_Deposit__c &gt;0, FORMULA_Deposit__c * Quantity , 0)</formula>
    <label>Total Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>