DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Total_Deposit_sp__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_sp__c</fullName>
    <formula>Deposit_Fee__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>