DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Total_Hardware_sp__c.field-meta.xml
<CustomField>
    <fullName>Total_Hardware_sp__c</fullName>
    <formula>IF( AND(ISPICKVAL(Charge_Type__c , &quot;OTC&quot;), Category_Type__c  = &quot;Hardware&quot;) ,

IF( Discount &gt; 0 ,(UnitPrice * Quantity)*Discount ,UnitPrice * Quantity),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hardware</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>