DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Total_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Fee__c</fullName>
    <formula>if( FORMULA_Monthly_Fee__c &gt;0, FORMULA_Monthly_Fee__c * Quantity , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>