DigicielFull/force-app/main/default/objects/QuoteLineItem/fields/Total_MRC__c.field-meta.xml
<CustomField>
    <fullName>Total_MRC__c</fullName>
    <formula>if(  FORMULA_Charge_Type__c =&quot;MRC&quot;,UnitPrice * Quantity ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>