DigicielFull/force-app/main/default/objects/QuoteLineItem/validationRules/IfNotInstallationProdCannotEditPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>IfNotInstallationProdCannotEditPrice</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 

OR(Quote.RecordTypeId =LEFT( $Label.PNG_QuoteRecordTypeId, 15),
Quote.RecordTypeId =LEFT( $Label.PNG_ApprovedQuoteRecordType, 15), 
Quote.RecordTypeId =LEFT($Label.PNG_PNGQuoteRecTypeId , 15)), 
AND(NOT(PNG_HasInstallationProduct__c),$Profile.Name &lt;&gt; &quot;System Administrator&quot; ),

ISCHANGED( UnitPrice))</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>Cannot edit Sales Price for Line items which do not have installation Products</errorMessage>
</ValidationRule>