DigicielFull/force-app/main/default/objects/QuoteLineItem/validationRules/PNG_PreventFromAddingDiffTypeProducts.validationRule-meta.xml
<ValidationRule>
    <fullName>PNG_PreventFromAddingDiffTypeProducts</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Quote.RecordTypeId =LEFT( $Label.PNG_QuoteRecordTypeId, 15),Quote.RecordTypeId =LEFT( $Label.PNG_ApprovedQuoteRecordType, 15), Quote.RecordTypeId =LEFT($Label.PNG_PNGQuoteRecTypeId , 15)), 

OR(
  
AND(ISPICKVAL(Product2.Product_Type__c,&apos;GSM&apos;),( Quote.PNG_QuoteType__c =&apos;ICT&apos;)), 
AND(ISPICKVAL(Product2.Product_Type__c,&apos;ICT&apos;),( Quote.PNG_QuoteType__c =&apos;GSM&apos;)))

)</errorConditionFormula>
    <errorMessage>Please select Products according to Quote type.</errorMessage>
</ValidationRule>