DigicielFull/force-app/main/default/objects/QuoteLineItem/validationRules/PNG_PreventLineItemChangeAfterApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>PNG_PreventLineItemChangeAfterApproved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

Quote.RecordType.Name = &quot;Digicel PNG Approved Quote&quot;&amp;&amp;
Quote.PNG_QuoteType__c  &lt;&gt; &quot;GSM&quot;,

ISCHANGED(Product2Id)||
ISNEW()||
ISCHANGED( UnitPrice ),

$Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Quote is approved. Please do not change line item.</errorMessage>
</ValidationRule>