DigicielFull/force-app/main/default/objects/QuoteLineItem/validationRules/PNG_PreventProfilesNotPreSalesEditPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>PNG_PreventProfilesNotPreSalesEditPrice</fullName>
    <active>false</active>
    <errorConditionFormula>AND( OR(Quote.RecordTypeId =LEFT( $Label.PNG_QuoteRecordTypeId, 15),Quote.RecordTypeId =LEFT( $Label.PNG_ApprovedQuoteRecordType, 15), Quote.RecordTypeId =LEFT($Label.PNG_PNGQuoteRecTypeId , 15)),(PNG_HasInstallationProduct__c) , ISCHANGED( UnitPrice ),  NOT($Profile.Id = $Label.PNG_PreSalesProfileId || $Profile.Id = $Label.PNG_SystemAdminProfileId))</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>Cannot edit sales price as you are not part of Pre-Sales Team</errorMessage>
</ValidationRule>